Project7/Parse/MiniJavaParser.java
/* MiniJavaParser.java */
/* Generated By:JavaCC: Do not edit this line. MiniJavaParser.java */
package Parse;
import java.util.LinkedList;
public class MiniJavaParser implements MiniJavaParserConstants {

  static final public Absyn.Program Goal() throws ParseException {LinkedList<Absyn.ClassDecl> classes = new LinkedList<Absyn.ClassDecl>();
    Absyn.ClassDecl c;
    c = MainClassDeclaration();
classes.add(c);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CLASS:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      c = ClassOrThreadDeclaration();
classes.add(c);
    }
    jj_consume_token(0);
{if ("" != null) return new Absyn.Program(classes);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.ClassDecl MainClassDeclaration() throws ParseException {Token name, arg; Absyn.VarDecl var; Absyn.Stmt stmt;
    LinkedList<Absyn.Formal> params=new LinkedList<Absyn.Formal>();
    LinkedList<Absyn.VarDecl> locals=new LinkedList<Absyn.VarDecl>();
    LinkedList<Absyn.Stmt> stmts=new LinkedList<Absyn.Stmt>();
    LinkedList<Absyn.MethodDecl> methods=new LinkedList<Absyn.MethodDecl>();
    jj_consume_token(CLASS);
    name = jj_consume_token(ID);
    jj_consume_token(LBRACE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPAREN);
    jj_consume_token(STRING_TYPE);
    jj_consume_token(LBRACKET);
    jj_consume_token(RBRACKET);
    arg = jj_consume_token(ID);
    jj_consume_token(RPAREN);
params.add(new Absyn.Formal(new Absyn.ArrayType(new Absyn.IdentifierType("String")),arg.image));
    jj_consume_token(LBRACE);
    label_2:
    while (true) {
      if (jj_2_1(2147483647)) {
        ;
      } else {
        break label_2;
      }
      var = VarDeclaration();
locals.add(var);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case XINU:
      case IF:
      case WHILE:
      case NEW:
      case TRUE:
      case FALSE:
      case THIS:
      case NULL:
      case MINUS:
      case NOT:
      case LBRACE:
      case LPAREN:
      case INT:
      case STRING:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_3;
      }
      stmt = Statement();
stmts.add(stmt);
    }
    jj_consume_token(RBRACE);
    jj_consume_token(RBRACE);
methods.add(new Absyn.MethodDecl(null,false,"main",params,locals,stmts,new Absyn.IntegerLiteral(0)));
        {if ("" != null) return new Absyn.ClassDecl(name.image,null,new LinkedList<Absyn.VarDecl>(),methods);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.ClassDecl ClassOrThreadDeclaration() throws ParseException {Token name, parent=null; boolean thread=false; Absyn.VarDecl field; Absyn.MethodDecl method;
    LinkedList<Absyn.VarDecl> fields=new LinkedList<Absyn.VarDecl>();
    LinkedList<Absyn.MethodDecl> methods=new LinkedList<Absyn.MethodDecl>();
    jj_consume_token(CLASS);
    name = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case EXTENDS:{
      jj_consume_token(EXTENDS);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:{
        parent = jj_consume_token(ID);
        break;
        }
      case THREAD:{
        jj_consume_token(THREAD);
thread=true;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(LBRACE);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PUBLIC:
      case BOOLEAN:
      case INT_TYPE:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      if (jj_2_2(2147483647)) {
        method = VoidDeclaration();
if(!thread) {if (true) throw new ParseException("void methods are only allowed in Thread classes");} methods.add(method);
      } else if (jj_2_3(2147483647)) {
        method = MethodDeclaration();
methods.add(method);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case BOOLEAN:
        case INT_TYPE:
        case ID:{
          field = FieldDeclaration();
fields.add(field);
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    jj_consume_token(RBRACE);
if(thread) {if ("" != null) return new Absyn.ThreadDecl(name.image,fields,methods);}
        {if ("" != null) return new Absyn.ClassDecl(name.image,parent==null?null:parent.image,fields,methods);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.VarDecl FieldDeclaration() throws ParseException {Absyn.Type type; Token name;
    type = Type();
    name = jj_consume_token(ID);
    jj_consume_token(SEMICOLON);
{if ("" != null) return new Absyn.VarDecl(type,name.image,null);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.VarDecl VarDeclaration() throws ParseException {Absyn.Type type; Token name; Absyn.Expr init=null;
    type = Type();
    name = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ASSIGN:{
      jj_consume_token(ASSIGN);
      init = Expression();
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    jj_consume_token(SEMICOLON);
{if ("" != null) return new Absyn.VarDecl(type,name.image,init);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Type Type() throws ParseException {Absyn.Type type;
    type = BaseType();
    label_5:
    while (true) {
      if (jj_2_4(2)) {
        ;
      } else {
        break label_5;
      }
      jj_consume_token(LBRACKET);
      jj_consume_token(RBRACKET);
type=new Absyn.ArrayType(type);
    }
{if ("" != null) return type;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Type BaseType() throws ParseException {Token name;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case BOOLEAN:{
      jj_consume_token(BOOLEAN);
{if ("" != null) return new Absyn.BooleanType();}
      break;
      }
    case INT_TYPE:{
      jj_consume_token(INT_TYPE);
{if ("" != null) return new Absyn.IntegerType();}
      break;
      }
    case ID:{
      name = jj_consume_token(ID);
{if ("" != null) return new Absyn.IdentifierType(name.image);}
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public Absyn.MethodDecl MethodDeclaration() throws ParseException {boolean synced=false; Absyn.Type result,pt; Token name,pn; Absyn.VarDecl var; Absyn.Stmt stmt; Absyn.Expr value;
    LinkedList<Absyn.Formal> params=new LinkedList<Absyn.Formal>();
    LinkedList<Absyn.VarDecl> locals=new LinkedList<Absyn.VarDecl>();
    LinkedList<Absyn.Stmt> stmts=new LinkedList<Absyn.Stmt>();
    jj_consume_token(PUBLIC);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SYNCHRONIZED:{
      jj_consume_token(SYNCHRONIZED);
synced=true;
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    result = Type();
    name = jj_consume_token(ID);
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case BOOLEAN:
    case INT_TYPE:
    case ID:{
      pt = Type();
      pn = jj_consume_token(ID);
params.add(new Absyn.Formal(pt,pn.image));
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[9] = jj_gen;
          break label_6;
        }
        jj_consume_token(COMMA);
        pt = Type();
        pn = jj_consume_token(ID);
params.add(new Absyn.Formal(pt,pn.image));
      }
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    label_7:
    while (true) {
      if (jj_2_5(2147483647)) {
        ;
      } else {
        break label_7;
      }
      var = VarDeclaration();
locals.add(var);
    }
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case XINU:
      case IF:
      case WHILE:
      case NEW:
      case TRUE:
      case FALSE:
      case THIS:
      case NULL:
      case MINUS:
      case NOT:
      case LBRACE:
      case LPAREN:
      case INT:
      case STRING:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        break label_8;
      }
      stmt = Statement();
stmts.add(stmt);
    }
    jj_consume_token(RETURN);
    value = Expression();
    jj_consume_token(SEMICOLON);
    jj_consume_token(RBRACE);
{if ("" != null) return new Absyn.MethodDecl(result,synced,name.image,params,locals,stmts,value);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.VoidDecl VoidDeclaration() throws ParseException {Token name; Absyn.VarDecl var; Absyn.Stmt stmt;
    LinkedList<Absyn.VarDecl> locals=new LinkedList<Absyn.VarDecl>();
    LinkedList<Absyn.Stmt> stmts=new LinkedList<Absyn.Stmt>();
    jj_consume_token(PUBLIC);
    jj_consume_token(VOID);
    name = jj_consume_token(ID);
    jj_consume_token(LPAREN);
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    label_9:
    while (true) {
      if (jj_2_6(2147483647)) {
        ;
      } else {
        break label_9;
      }
      var = VarDeclaration();
locals.add(var);
    }
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case XINU:
      case IF:
      case WHILE:
      case NEW:
      case TRUE:
      case FALSE:
      case THIS:
      case NULL:
      case MINUS:
      case NOT:
      case LBRACE:
      case LPAREN:
      case INT:
      case STRING:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        break label_10;
      }
      stmt = Statement();
stmts.add(stmt);
    }
    jj_consume_token(RBRACE);
{if ("" != null) return new Absyn.VoidDecl(name.image,locals,stmts);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Stmt Statement() throws ParseException {Absyn.Stmt stmt;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LBRACE:{
      stmt = BlockStatement();
{if ("" != null) return stmt;}
      break;
      }
    case IF:{
      stmt = IfStatement();
{if ("" != null) return stmt;}
      break;
      }
    case WHILE:{
      stmt = WhileStatement();
{if ("" != null) return stmt;}
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      if (jj_2_7(2147483647)) {
        stmt = XinuCallStatement();
{if ("" != null) return stmt;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case XINU:
        case NEW:
        case TRUE:
        case FALSE:
        case THIS:
        case NULL:
        case MINUS:
        case NOT:
        case LPAREN:
        case INT:
        case STRING:
        case ID:{
          stmt = AssignmentStatement();
{if ("" != null) return stmt;}
          break;
          }
        default:
          jj_la1[14] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
}

  static final public Absyn.BlockStmt BlockStatement() throws ParseException {Absyn.Stmt s; LinkedList<Absyn.Stmt> list=new LinkedList<Absyn.Stmt>();
    jj_consume_token(LBRACE);
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case XINU:
      case IF:
      case WHILE:
      case NEW:
      case TRUE:
      case FALSE:
      case THIS:
      case NULL:
      case MINUS:
      case NOT:
      case LBRACE:
      case LPAREN:
      case INT:
      case STRING:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        break label_11;
      }
      s = Statement();
list.add(s);
    }
    jj_consume_token(RBRACE);
{if ("" != null) return new Absyn.BlockStmt(list);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.IfStmt IfStatement() throws ParseException {Absyn.Expr test; Absyn.Stmt yes,no=null;
    jj_consume_token(IF);
    jj_consume_token(LPAREN);
    test = Expression();
    jj_consume_token(RPAREN);
    yes = Statement();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ELSE:{
      jj_consume_token(ELSE);
      no = Statement();
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      ;
    }
{if ("" != null) return new Absyn.IfStmt(test,yes,no);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.WhileStmt WhileStatement() throws ParseException {Absyn.Expr test; Absyn.Stmt body;
    jj_consume_token(WHILE);
    jj_consume_token(LPAREN);
    test = Expression();
    jj_consume_token(RPAREN);
    body = Statement();
{if ("" != null) return new Absyn.WhileStmt(test,body);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.XinuCallStmt XinuCallStatement() throws ParseException {Token method; LinkedList<Absyn.Expr> args;
    jj_consume_token(XINU);
    jj_consume_token(DOT);
    method = jj_consume_token(ID);
    jj_consume_token(LPAREN);
    args = Arguments();
    jj_consume_token(RPAREN);
    jj_consume_token(SEMICOLON);
{if ("" != null) return new Absyn.XinuCallStmt(method.image,args);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.AssignStmt AssignmentStatement() throws ParseException {Absyn.Expr lhs,rhs;
    lhs = Expression();
    jj_consume_token(ASSIGN);
    rhs = Expression();
    jj_consume_token(SEMICOLON);
if(!(lhs instanceof Absyn.AssignableExpr)) {if (true) throw new ParseException("left side of assignment is not assignable");}
        {if ("" != null) return new Absyn.AssignStmt((Absyn.AssignableExpr)lhs,rhs);}
    throw new Error("Missing return statement in function");
}

  static final public LinkedList<Absyn.Expr> Arguments() throws ParseException {LinkedList<Absyn.Expr> args=new LinkedList<Absyn.Expr>(); Absyn.Expr e;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case XINU:
    case NEW:
    case TRUE:
    case FALSE:
    case THIS:
    case NULL:
    case MINUS:
    case NOT:
    case LPAREN:
    case INT:
    case STRING:
    case ID:{
      e = Expression();
args.add(e);
      label_12:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[17] = jj_gen;
          break label_12;
        }
        jj_consume_token(COMMA);
        e = Expression();
args.add(e);
      }
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      ;
    }
{if ("" != null) return args;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Expr Expression() throws ParseException {Absyn.Expr e;
    e = OrExpression();
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Expr OrExpression() throws ParseException {Absyn.Expr a,b;
    a = AndExpression();
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:{
        ;
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        break label_13;
      }
      jj_consume_token(OR);
      b = AndExpression();
a=new Absyn.OrExpr(a,b);
    }
{if ("" != null) return a;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Expr AndExpression() throws ParseException {Absyn.Expr a,b;
    a = EqualityExpression();
    label_14:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:{
        ;
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        break label_14;
      }
      jj_consume_token(AND);
      b = EqualityExpression();
a=new Absyn.AndExpr(a,b);
    }
{if ("" != null) return a;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Expr EqualityExpression() throws ParseException {Absyn.Expr a,b;
    a = RelationalExpression();
    label_15:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EQ:
      case NE:{
        ;
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        break label_15;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EQ:{
        jj_consume_token(EQ);
        b = RelationalExpression();
a=new Absyn.EqualExpr(a,b);
        break;
        }
      case NE:{
        jj_consume_token(NE);
        b = RelationalExpression();
a=new Absyn.NotEqExpr(a,b);
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return a;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Expr RelationalExpression() throws ParseException {Absyn.Expr a,b;
    a = AdditiveExpression();
    label_16:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case GT:
      case LT:{
        ;
        break;
        }
      default:
        jj_la1[23] = jj_gen;
        break label_16;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LT:{
        jj_consume_token(LT);
        b = AdditiveExpression();
a=new Absyn.LesserExpr(a,b);
        break;
        }
      case GT:{
        jj_consume_token(GT);
        b = AdditiveExpression();
a=new Absyn.GreaterExpr(a,b);
        break;
        }
      default:
        jj_la1[24] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return a;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Expr AdditiveExpression() throws ParseException {Absyn.Expr a,b;
    a = MultiplicativeExpression();
    label_17:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:{
        ;
        break;
        }
      default:
        jj_la1[25] = jj_gen;
        break label_17;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        jj_consume_token(PLUS);
        b = MultiplicativeExpression();
a=new Absyn.AddExpr(a,b);
        break;
        }
      case MINUS:{
        jj_consume_token(MINUS);
        b = MultiplicativeExpression();
a=new Absyn.SubExpr(a,b);
        break;
        }
      default:
        jj_la1[26] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return a;}
    throw new Error("Missing return statement in function");
}
